# autoupdate

./: .env.dev  .gitignore  pyproject.toml
autoupdate/: config.py  logic.py  main.py  model.py  parser.py  parser_yaml.py
autoupdate/config/: standart.py  tg.py
tests/: start.py  test.yaml
